force-app/main/default/objects/copado__User_Story__c/fields/Has_Flow_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Has_Flow_Metadata__c</fullName>
    <label>Has Flow Metadata</label>
    <length>154</length>
    <type>Text</type>
</CustomField>