force-app/main/default/objects/copado__User_Story__c/fields/JIra_key_hyperlink__c.field-meta.xml
<CustomField>
    <fullName>JIra_key_hyperlink__c</fullName>
    <description>Create Jira hyperlink</description>
    <formula>HYPERLINK(&apos;https://evil-inc.atlassian.net/browse/&apos; + Jira_Key__c , &apos;Jira URL&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JIra key hyperlink</label>
    <type>Text</type>
</CustomField>