force-app/main/default/objects/copado__User_Story__c/fields/Skip_this__c.field-meta.xml
<CustomField>
    <fullName>Skip_this__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip this</label>
    <type>Checkbox</type>
</CustomField>