force-app/main/default/objects/copado__User_Story__c/fields/Testing__c.field-meta.xml
<CustomField>
    <fullName>Testing__c</fullName>
    <label>Testing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bogdan</fullName>
            </value>
            <value>
                <fullName>Pramod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>