force-app/main/default/objects/copado__User_Story__c/validationRules/Require_Pull_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Pull_Request</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( copado__Metadata_Types_in_Selection__c )),
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
),
copado__Pull_Requests_Approved__c =false
)</errorConditionFormula>
    <errorMessage>Pull Request must be approved before deploying forward</errorMessage>
</ValidationRule>