force-app/main/default/objects/copado__User_Story__c/listViews/X2026.listView-meta.xml
<ListView>
    <fullName>X2026</fullName>
    <columns>JIra_key_hyperlink__c</columns>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Release__c</columns>
    <columns>copado__Latest_Commit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Project__c</field>
        <operation>equals</operation>
        <value>Adaptive Innovation</value>
    </filters>
    <label>2026</label>
</ListView>